--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Generated during build.
+WelcomePage/WelcomePage.WebServer.zip
+
+# ReSharper file that I don't particularly feel like sharing.
+*.DotSettings
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
@@ -106,3 +112,7 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# Editor temporaries
+*.swp
+*~
