--- a/Chat/packages.config
+++ b/Chat/packages.config
@@ -1,16 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="1.9.1" targetFramework="net40" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net461" />
+  <package id="jQuery" version="2.2.0" targetFramework="net461" />
   <package id="json2" version="1.0.2" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.2" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.2" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" />
-  <package id="Microsoft.Owin" version="1.1.0-beta2" targetFramework="net40" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="1.1.0-beta2" targetFramework="net40" />
-  <package id="Microsoft.Owin.Hosting" version="1.1.0-beta2" targetFramework="net40" />
-  <package id="Nancy" version="0.17.1" targetFramework="net40" />
-  <package id="Nancy.Owin" version="0.17.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
+  <package id="Nancy" version="1.4.3" targetFramework="net461" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net40" />
-  <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net461" />
 </packages>
